--- a/products.html
+++ b/products.html
@@ -30,11 +30,7 @@
 		<div class="navbar-inner">
 			<div class="container">
 				<!-- Navigation Expand Button -->
-				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			    </a>
+				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" style="position: absolute; top: 40px; right: 20px; color: #fff; text-shadow: none;"><div style="float: left; margin-right: 10px; position: relative; top: 2px;"><i class="icon-bar icon-white"></i><i class="icon-bar icon-white"></i><i class="icon-bar icon-white"></i></div> NAVIGATION</a>
 			    <!-- Desktop Navigation -->
 			    <a href="index.html"><img id="logo" src="./img/bcs_logo_small_white.png" alt="Bar &amp; Club Stats"/></a>
 			    <ul class="nav visible-desktop" style="float: right;">
