--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		    		<a class="btn btn-large btn-primary" href="features.html">Learn More</a> <a class="btn btn-large btn-warning" href="product-detail.html">Purchase Scanner &raquo;</a>
 	    		</div>
 	    		<div class="span6 visible-desktop" id="desktop_preview">
-	    			<img src="./img/laptop_dashboard.png" />
+	    			<img src="./img/laptop_dashboard3.png" />
 	    		</div>
 	    		<div class="span12 hidden-desktop" id="callout-mobile">
 	    			<h1>An easier way to check IDs &amp; collect statistics about your customers.</h1>
@@ -81,13 +81,13 @@
 	<!-- Home Page - Main Content -->
     <div class="container">
 	    <div class="row">
-	    	<div class="span3">
+	    	<div class="span3 features-well">
 	    		<div class="well">
 	    			<h3>Protect your venue</h3>
 	    			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
 	    		</div>
 	    	</div>
-	    	<div class="span3">
+	    	<div class="span3 features-well">
 	    		<div class="well">
 	    			<h3>Know your customers</h3>
 	    			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
